--- a/index.html
+++ b/index.html
@@ -1,14 +1,68 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Shane Ouyang Portfolio</title>
-</head>
-<body>
-  <header>Shane Ouynag</header>
-  <h1>About Me</h1>
+  <style>
+    
+    body{
+    	background-color: beige;
+    	margin: 0px;
+    	padding: 0px;
+    }
 
-  <p></p>	
+    h1{
+    	font-size: 60px;
+    	color: white;
+    	text-align: center;
+        background-color: blue;
+        margin: 0px;
+        padding: 0px;
+    }
+    
+    h2{
+    	padding-left: 10px;
+    }
+
+    p{
+    	padding-left: 10px;
+    }
+
+    li{
+    	padding-left: 20px;
+    }
+
+  </style>
+
+</head>
+
+<body>
+  
+  <header>
+    <h1>Shane Ouynag</h1>
+  </header>
+  
+  <div class="container">
+
+    <section id="main-bio">
+      <h2>About Me</h2>
+      <img src="#" alt="Shane Ouyang" id="bio-image">
+      <p>Not a computer geek, but find the extremely logical world of coding fascinating.
+      <br>
+      I wanna figure out if i can do something in this line of work.</p>
+    </section>
+
+    <section id="contact-info">
+     	 <h2>Contact Info</h2>
+     	 <ul>
+     	   <li><strong>Email: </strong><a href="mailto:shane.ouyang@gmail.com" target="_blank">shane.ouyang@gmail.com</a></li>
+     	   <li><strong>GitHub: </strong><a href="#" target="_blank">lmcfinn</a></li>
+     	   <li><strong>LinkedIn: </strong><a href="#" target="_blank">Shane Ouyang</a></li>		
+     	 </ul>
+     </section>	
+
+  </div>
 
 </body>
 </html>
