about me page done

--- a/index.html
+++ b/index.html
@@ -28,21 +28,25 @@
 
 
   <div class="main"> 
-  
-
     <div id="main-bio">
       <h2 id="about-me">About Me</h2>
-      <img id="bio-image" src="#" alt="Shane Ouyang">
-      <p>Not a computer geek, but find the extremely logical world of coding fascinating.
-      <br>
-      I wanna figure out if i can do something in this line of work.</p>
+      <img id="bio-image" src="assets/images/me.jpg" alt="Shane Ouyang">
+      <p>The truth is I never wanted to become a coder, but somehow this is exactly where my ever so winding career path has led me.
+      <br><br>
+      I started out as a copy editor after college, editing high school English text book. I was trained to spot that tiny extra space buried deep in thousands of words. Really not that different from debugging.
+      <br><br>
+      I then went on to work in an advertising agency as account executive, dealing with clients who expected me to explain everything, no matter how complicated, in three sentences. Speaking of understanding the importance of good user interface. 
+      <br><br>   
+      After that, I got a job as Internet Marketing Manager for a toilet manufacturer. My coworkers are experts on perfecting a powerful flush down the drain, but not what's happening up in the "clouds". I have become who they turn to when it comes to the "internet".
+      <br><br>
+      So after working with four different teams of programmers for various websites and mobile apps, I have become so fascinated with the wonders created by the modern-day "bricklayers and craftmakers" of our highly digitalized world that I want to be one of them. 
+      </p>
     </div>
-
     <div id="contact-info">
-     	 <h2 id="contact-me">Contact Info</h2>
-     	 <img id="git-img" src="#" alt="GitHub">
-       <img id="linked-img" src="#" alt="LinkedIn">
-       <img id="so-img" src="#" alt="Slack Overflow">
+     	 <h2 id="contact-me">Connect with Me</h2>
+     	 <a href="https://github.com/lmcfinn" target="_blank"><img id="git-img" src="assets/images/github-128.png" alt="GitHub"></a>
+       <a href="https://www.linkedin.com/in/shane-ouyang-56a641b/" target="_blank"><img id="linked-img" src="assets/images/square-linkedin-128.png" alt="LinkedIn"></a>
+       <a href="http://stackoverflow.com/" target="_blank"><img id="so-img" src="assets/images/stackoverflow-square-social-media-128.png" alt="Slack Overflow"></a>
      </div>	
   </div>
 
