--- a/portfolio.html
+++ b/portfolio.html
@@ -47,12 +47,12 @@
        </div>
 
        <div>
-          <img id="middle-right" src="rutger2.jpeg" alt="rutger info widget">
+          <img id="middle-right" src="assets/images/rutger1.jpeg" alt="rutger info widget">
           <div id="rutger">Rutger Info Widget</div>
        </div>
 
        <div>
-         <img id="lower-left" src="placeholder_4.jpeg" alt="rock paper scissors">
+         <img id="lower-left" src="assets/images/placeholder_4.jpeg" alt="rock paper scissors">
          <div id="rock">Rock Paper Scissors</div>
        </div>
       </div>
