--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="main-bio">
       <h2 id="about-me">About Me</h2>
       <img id="bio-image" src="assets/images/me.jpg" alt="Shane Ouyang">
-      <p>The truth is I never wanted to become a coder, but somehow this is exactly where my ever so winding career path has led me.
+      <p id="main-copy">The truth is I never wanted to become a coder, but somehow this is exactly where my ever so winding career path has led me.
       <br><br>
       I started out as a copy editor after college, editing high school English text book. I was trained to spot that tiny extra space buried deep in thousands of words. Really not that different from debugging.
       <br><br>
